# scripts

./: .gitignore  README.md
capture-timemap/: capture_timemap.applescript
geocoder/: geoCoder.py  geocoded-output.csv  readme.md  requirements.txt  search-locations.csv
linkchecker/: linkChecker.py  readme.md  sources.json
raw-dataset-annotater/: README.md  convert  docker.requirements.txt  meta.json  run_annotater
raw-dataset-annotater/pascal/: config.py  rename_files.py  requirements.txt  supervisely_to_pascal_voc.py
raw-dataset-annotater/python/: Dockerfile  docker.requirements.txt  run_annotater
raw-dataset-annotater/rust/: Cargo.toml  README.md
raw-dataset-annotater/rust/src/: anns.rs  errors.rs  sly.rs  util.rs
raw-dataset-annotater/rust/tests/: .gitignore  test_sly_generation.rs
raw-dataset-annotater/rust/tests/example/: config.json
raw-dataset-annotater/rusty_infer/: Cargo.toml  README.md
raw-dataset-annotater/supervisely/: bitmap_to_polygon.py  convert_masks.py  supervisely_util.py
raw-dataset-annotater/supervisely_rs/: Cargo.toml
split-textured-geo/: README.md  all-imgs-resize.py  all-imgs-skim-pixels.py  tile-folder-169.sh  tile-folder-50.sh
split-textured-geo/docs/: split-geometry-by-nurbs-maya.md  split-geometry-in-maya.md
to_pascal/: README.md  config.py  supervisely_to_pascal_voc.py
ue4-supervisely/: Dockerfile  README.md  docker.requirements.txt  prepare_folder.sh  run.sh  setup.sh
video-pixel-profile/: README.md  framer.py  framerAverage.py  framerMidPointX.py  framerMidPointY.py  requirements.txt
(+21 files in other folders)
