[package]
name = "rusty_infer"
version = "0.1.0"
authors = ["Lachlan Kermode <lachiekermode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.3"
image = "0.23.12"
base64 = "0.13.0"
flate2 = "1.0"
